tweaked the layout of text pairs.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -3725,79 +3725,79 @@
                     </div>
                     <div class="column is-2"></div>
                   </h2>
-                  <form name="text-pair-form" id="textPairForm" class="table-container">
-                    <table class="table is-bordered is-fullwidth has-text-left" id="color-text-pairs">
+                  <form name="text-pair-form" id="textPairForm" class="table-container is-rounded">
+                    <table class="table is-fullwidth has-text-left" id="color-text-pairs">
                       <tr>
                         <td class="control theme-msdos-fg theme-msdos-bg">
-                          <input type="radio" class="radio" name="text-pair-form" value="theme-msdos" id="theme-msdos">
                           <label for="theme-msdos" class="radio">MS-DOS</label>
+                          <input type="radio" class="radio" name="text-pair-form" value="theme-msdos" id="theme-msdos">
                         </td>
                         <td class="control theme-windows-fg theme-windows-bg">
+                          <label for="theme-windows" class="radio">Windows</label>
                           <input type="radio" class="radio" name="text-pair-form" value="theme-windows"
                             id="theme-windows">
-                          <label for="theme-windows" class="radio">Windows</label>
                         </td>
                         <td class="theme-amiga-fg theme-amiga-bg">
-                          <input type="radio" class="radio" name="text-pair-form" value="theme-amiga" id="theme-amiga">
                           <label for="theme-amiga" class="radio">Amiga</label>
+                          <input type="radio" class="radio" name="text-pair-form" value="theme-amiga" id="theme-amiga">
                         </td>
                       </tr>
                       <tr>
                         <td class="control theme-c64-fg theme-c64-bg">
-                          <input type="radio" class="radio" name="text-pair-form" value="theme-c64" id="theme-c64">
                           <label for="theme-c64" class="radio">C64</label>
+                          <input type="radio" class="radio" name="text-pair-form" value="theme-c64" id="theme-c64">
                         </td>
                         <td class="control theme-appleii-fg theme-appleii-bg">
+                          <label for="theme-appleii" class="radio">Apple II</label>
                           <input type="radio" class="radio" name="text-pair-form" value="theme-appleii"
                             id="theme-appleii">
-                          <label for="theme-appleii" class="radio">Apple II</label>
                         </td>
                         <td class="control theme-atarist-fg theme-atarist-bg">
+                          <label for="theme-atarist" class="radio">Atari ST</label>
                           <input type="radio" class="radio" name="text-pair-form" value="theme-atarist"
                             id="theme-atarist">
-                          <label for="theme-atarist" class="radio">Atari ST</label>
                         </td>
                       </tr>
                       <tr>
                         <td class="control theme-white-on-black-fg theme-white-on-black-bg">
+                          <label for="theme-white-on-black" class="radio">white on dark</label>
                           <input type="radio" class="radio" name="text-pair-form" value="theme-white-on-black"
                             id="theme-white-on-black">
-                          <label for="theme-white-on-black" class="radio">white on dark</label>
                         </td>
                         <td class="control theme-amber-on-black-fg theme-amber-on-black-bg">
+                          <label for="theme-amber-on-black" class="radio">amber on dark</label>
                           <input type="radio" class="radio" name="text-pair-form" value="theme-amber-on-black"
                             id="theme-amber-on-black">
-                          <label for="theme-amber-on-black" class="radio">amber on dark</label>
                         </td>
                         <td class="control theme-green-on-black-fg theme-green-on-black-bg">
+                          <label for="theme-green-on-black" class="radio">green on dark</label>
                           <input type="radio" class="radio" name="text-pair-form" value="theme-green-on-black"
                             id="theme-green-on-black">
-                          <label for="theme-green-on-black" class="radio">green on dark</label>
                         </td>
                       </tr>
                       <tr>
                         <td class="control theme-black-on-white-fg theme-black-on-white-bg">
+                          <label for="theme-black-on-white" class="radio">white on light</label>
                           <input type="radio" class="radio" name="text-pair-form" value="theme-black-on-white"
                             id="theme-black-on-white">
-                          <label for="theme-black-on-white" class="radio">white on light</label>
                         </td>
                         <td class="control theme-amber-on-white-fg theme-amber-on-white-bg">
+                          <label for="theme-amber-on-white" class="radio">amber on light</label>
                           <input type="radio" class="radio" name="text-pair-form" value="theme-amber-on-white"
                             id="theme-amber-on-white">
-                          <label for="theme-amber-on-white" class="radio">amber on light</label>
                         </td>
                         <td class="control theme-green-on-white-fg theme-green-on-white-bg">
+                          <label for="theme-green-on-white" class="radio">green on light</label>
                           <input type="radio" class="radio" name="text-pair-form" value="theme-green-on-white"
                             id="theme-green-on-white">
-                          <label for="theme-green-on-white" class="radio">green on light</label>
                         </td>
                       </tr>
                       <tr>
                         <td class="control" colspan="3" id="textPairCustomContainer">
-                          <input type="radio" class="radio" name="text-pair-form" value="theme-custom"
-                            id="textPairCustomFont">
                           <label for="textPairCustomFont" class="radio" id="textPairCustomLabel">custom <span
                               class="msg-color">color</span> values</label>
+                          <input type="radio" class="radio" name="text-pair-form" value="theme-custom"
+                            id="textPairCustomFont">
                         </td>
                       </tr>
                     </table>
