sync options on new install.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -124,18 +124,19 @@
             </div>
             <div class="notice" style="display: none;" id="newInstallNotice">
               <div class="notification is-success is-light">
-                <p class="mb-2 is-size-2">Getting started</p>
-                <p class="mt-2 is-size-5">Read the <a href="https://docs.retrotxt.com/usage/first/" target="_blank">
-                    first-time usage documentation</a></p>
-                <p class="mt-2 is-size-5">There are dozens of <a id="newInstallSamples">sample text art files</a> to try
-                  with RetroTxt
+                <p class="mb-2 is-size-2">Welcome. <small>Get started with,</small></p>
+                <p class="mt-2 is-size-5">Dozens of
+                  <a id="newInstallSamples">sample text art files</a>
+                  to try with RetroTxt.
                 </p>
+                <p class="mt-2 is-size-5"><a href="https://docs.retrotxt.com/usage/first/" target="_blank">
+                    First-time usage documentation</a>.</p>
                 <p class="mt-2 is-size-5">
-                  You can use RetroTxt as a local text file viewer <span class="has-text-info">*</span>
+                  Use RetroTxt as a text file viewer. <span class="has-text-info">*</span>
                 </p>
                 <p class="mt-1">
-                  Either, drag-and-drop text files to this browser<br>
-                  Or use the <code class="file-url-scheme">file:///</code> URL scheme in a tab
+                  Either, drag-and-drop text files to this browser.<br>
+                  Or use <code class="file-url-scheme">file:///</code> in a tab.
                 </p>
               </div>
             </div>
