Update display sample text in options.html

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -3566,13 +3566,16 @@
                         <br><span class="has-text-info">Any open tabs will require a reload.</span>
                       </p>
                       <p class="is-size-7 mt-2 mb-1">off</p>
-                      <p name="display-sample-text" class="font-ibm_vga_8x16 has-text-weight-normal">◘░▒▓███▄▐▌▀███■
-                        ABCabc</p>
+                      <p name="display-sample-text" class="font-ibm_vga_8x16 has-text-weight-normal">
+                        &nbsp;◘░░░▒▒▒▓▓▓███▄▐▌▀███■
+                        &nbsp;AaBbCcDdEeFfGgHhIiJjKk
+                      </p>
+                      </p>
                       <p class="is-size-7 mt-2 mb-1">on</p>
                       <p name="display-sample-text" class="font-ibm_vga_8x16 has-text-weight-normal">
-                        <span
-                          id="smearBlocksExample"><b>◘</b><b>░</b><b>▒</b><b>▓</b><b>█</b><b>█</b><b>█</b><b>▄</b><b>▐</b><b>▌</b><b>▀</b><b>█</b><b>█</b><b>█</b><b>■</b></span>
-                        ABCabc
+                        &nbsp;<span
+                          id="smearBlocksExample"><b>◘</b><b>░░░</b><b>▒▒▒</b><b>▓▓▓</b><b>█</b><b>█</b><b>█</b><b>▄</b><b>▐</b><b>▌</b><b>▀</b><b>█</b><b>█</b><b>█</b><b>■</b></span>
+                        &nbsp;AaBbCcDdEeFfGgHhIiJjKk&nbsp;
                       </p>
                     </div>
                     <div class="column is-2">
@@ -3602,11 +3605,13 @@
                       <p class="is-size-7 mt-2 mb-1">off</p>
                       <p class="font-ibm_vga_9x16 has-text-weight-normal">
                         &nbsp;◘░░░▒▒▒▓▓▓███▄▐▌▀███■
-                        ABCabc&nbsp;</p>
+                        &nbsp;AaBbCcDdEeFfGgHhIiJjKk&nbsp;
+                      </p>
                       <p class="is-size-7 mt-2 mb-1">on</p>
                       <p class="font-ibm_vga_9x16-example has-text-weight-normal">
                         &nbsp;◘░░░▒▒▒▓▓▓███▄▐▌▀███■
-                        ABCabc&nbsp;</p>
+                        &nbsp;AaBbCcDdEeFfGgHhIiJjKk&nbsp;
+                      </p>
                     </div>
                     <div class="column is-2">
                       <div class="toggleswitch">
@@ -3624,17 +3629,20 @@
                       <p class="subtitle has-text-dark is-size-7 mb-0 has-text-justified">
                         Apply a subtle shadow effect on each character.
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7 mb-2">recommend <span
-                          class="has-text-info">off</span>
+                          class="has-text-grey">off</span>
                       </p>
                       </p>
                       <p class="is-size-7 mt-2 mb-1">off</p>
-                      <p class="font-ibm_vga_9x16 has-text-weight-normal">
+                      <p name="display-sample-text" class="font-ibm_vga_9x16 has-text-weight-normal">
                         &nbsp;◘░░░▒▒▒▓▓▓███▄▐▌▀███■
-                        ABCabc&nbsp;</p>
+                        &nbsp;AaBbCcDdEeFfGgHhIiJjKk&nbsp;
+                      </p>
                       <p class="is-size-7 mt-2 mb-1">on</p>
-                      <p class="font-ibm_vga_9x16 has-text-weight-normal theme-windows theme-windows-shadowed">
+                      <p name="display-sample-text"
+                        class="font-ibm_vga_9x16 has-text-weight-normal theme-windows theme-windows-shadowed">
                         &nbsp;◘░░░▒▒▒▓▓▓███▄▐▌▀███■
-                        ABCabc&nbsp;</p>
+                        &nbsp;AaBbCcDdEeFfGgHhIiJjKk&nbsp;
+                      </p>
                     </div>
                     <div class="column is-2">
                       <div class="toggleswitch">
@@ -3716,8 +3724,9 @@
                   <h2 class="title has-text-dark is-size-6 columns">
                     <div class="column">Text pairs
                       <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">
-                        Here you can choose a font and a background <span class="msg-color">color</span> for all text
-                        handled by RetroTxt.
+                        Here you can choose font and background
+                        <span class="msg-color">color</span>s
+                        for all text handled by RetroTxt.
                         The named themes are inspired by the <span class="msg-color">color</span> choices on historic
                         home computer systems and terminals.
                       </p>
