Reset to defaults button.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -4047,6 +4047,7 @@
                     <button id="syncStoreBackup" class="button is-primary">Backup</button>
                     <button id="syncStoreRestore" class="button is-primary is-outlined">Restore</button>
                     <button id="syncStoreClear" class="button is-ghost">Clear sync storage</button>
+                    <button id="syncStoreReset" class="button is-ghost">Reset to defaults</button>
                   </div>
                 </div>
                 <hr>
@@ -4271,6 +4272,7 @@
                 <li id="newUpdate" style="display: none;">
                   <a href="#update">New update</a>
                 </li>
+                <li>&nbsp;</li>
               </ul>
             </div>
           </nav>
