--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -4076,20 +4076,18 @@
                             </p>
                             <p class="control">
                               <button id="submitHost" class="button is-success" disabled>
-                                add
+                                Add
                               </button>
                             </p>
                           </div>
                           <p class="help">Paste a URL or hostname</p>
                         </div>
-                        <div class="field has-text-centered">
-                          <button id="removeSuggestedDomains" class="button is-small">
-                            delete
-                          </button>
+                        <div class="buttons has-text-centered">
                           <button id="includeSuggestedDomains" class="button is-success is-small">
-                            restore
+                            Restore
+                          </button><button id="removeSuggestedDomains" class="button is-small">
+                            Clear
                           </button>
-                          <p class="help">Hostname defaults</p>
                         </div>
                       </div>
                       <div class="field is-grouped is-grouped-multiline mt-5" id="hostTags">
